<resources>
    <string name="app_name">TalkOn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="bio">Bio</string>
    <string name="edit_details">Edit Details</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_image">Change Image</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_new_account_sign_up">Need New Account? Sign Up</string>
    <string name="already_have_an_account_sign_in">Already Have An Account? Sign in</string>
    <string name="register">Register</string>
    <string name="add_post">Add Post</string>
</resources>